objects/iahelp__HelpResource__c.object
<CustomObject>
    <description>An external Help Resource accessible from one or more Help Topics (via Help Topic Resources)</description>
    <fields>
        <fullName>iahelp__Location__c</fullName>
        <defaultValue>&quot;Unknown&quot;</defaultValue>
        <description>The name of the repository or facility that houses this Help Resource</description>
        <inlineHelpText>The name of the repository or facility that houses this Help Resource</inlineHelpText>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__PreviewURL__c</fullName>
        <description>Auto-generated value representing the URL of a suitable preview image for this Help Resource</description>
        <formula>IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Document&quot;) , 
    &quot;/resource/iahelp__IHResources/img/IconResourceDocument.png&quot;,
IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Web-Page&quot;),
     &quot;/resource/iahelp__IHResources/img/IconResourceWebPage.png&quot;,
IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Video&quot;),
    &quot;/resource/iahelp__IHResources/img/IconResourceVideo.png&quot;,
iahelp__ResourceURL__c) ))</formula>
        <inlineHelpText>Auto-generated value representing the URL of a suitable preview image for this Help Resource</inlineHelpText>
        <label>Preview URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__Preview__c</fullName>
        <formula>IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Document&quot;) , 
    IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000T3Ah&amp;oid=00Dd0000000di2a&quot;, &quot;Document Icon&quot;, 32, 32),
IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Web-Page&quot;),
        IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000T3Va&amp;oid=00Dd0000000di2a&quot;, &quot;Web-page Icon&quot;, 32, 32),
IF( ISPICKVAL( iahelp__ResourceType__c , &quot;Video&quot;),
    IMAGE(&quot;/servlet/servlet.ImageServer?id=015d0000000T3V2&amp;oid=00Dd0000000di2a&quot;, &quot;Video Icon&quot;, 32, 32),
IMAGE( iahelp__ResourceURL__c , &quot;Preview from Link &quot; &amp;  iahelp__ResourceURL__c, 32, 32) ) ))</formula>
        <inlineHelpText>Formula returning a Preview of the Help Resource (if available)</inlineHelpText>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__RelatedHelpTopics__c</fullName>
        <inlineHelpText>Rolled-up Summary field showing the number of Help Topics referencing this Help Resource</inlineHelpText>
        <label>Related Help Topics</label>
        <summaryForeignKey>iahelp__HelpTopicResource__c.iahelp__HelpResource__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iahelp__ResourceType__c</fullName>
        <inlineHelpText>Defines the Type of Help Resource and the Preview that Helped Users will see in Related Help Resources listings</inlineHelpText>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web-page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iahelp__ResourceURL__c</fullName>
        <description>Link (URL) to this Help Resource</description>
        <inlineHelpText>Link (URL) to this Help Resource</inlineHelpText>
        <label>Resource URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>iahelp__Summary__c</fullName>
        <inlineHelpText>Summary description of this Help Resource</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help Resource</label>
    <listViews>
        <fullName>iahelp__All</fullName>
        <columns>NAME</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__Preview__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>iahelp__RelatedHelpTopics__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>1. All Help Resources</label>
    </listViews>
    <listViews>
        <fullName>iahelp__AllDocs</fullName>
        <columns>NAME</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__Preview__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__ResourceType__c</field>
            <operation>equals</operation>
            <value>Document</value>
        </filters>
        <label>All Document Help Resources</label>
    </listViews>
    <listViews>
        <fullName>iahelp__AllImage</fullName>
        <columns>NAME</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__Preview__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__ResourceType__c</field>
            <operation>equals</operation>
            <value>Image</value>
        </filters>
        <label>All Image Help Resources</label>
    </listViews>
    <listViews>
        <fullName>iahelp__AllVideos</fullName>
        <columns>NAME</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__Preview__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__ResourceType__c</field>
            <operation>equals</operation>
            <value>Video</value>
        </filters>
        <label>All Video Help Resources</label>
    </listViews>
    <listViews>
        <fullName>iahelp__AllWebPage</fullName>
        <columns>NAME</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__Preview__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>iahelp__ResourceType__c</field>
            <operation>equals</operation>
            <value>Web-page</value>
        </filters>
        <label>All Web Page Help Resources</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Number_of_Related_Help_Topics</fullName>
        <columns>iahelp__RelatedHelpTopics__c</columns>
        <columns>NAME</columns>
        <columns>iahelp__ResourceURL__c</columns>
        <columns>iahelp__ResourceType__c</columns>
        <columns>iahelp__Summary__c</columns>
        <columns>iahelp__Location__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Number of Related Help Topics</label>
    </listViews>
    <nameField>
        <label>Help Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>